--- a/delcaratie_instalare_final/templates/declaratie.html
+++ b/delcaratie_instalare_final/templates/declaratie.html
@@ -32,26 +32,24 @@
             </p>
 
         <form id="formDeclaratie" method="POST">
-            <p>
+            <p style="color: black; text-align: justify;">
                 Subsemnatul
                 <input type="text" name="nume" style="width: 200px;" required>, posesor al buletinului (cărții) de identitate seria:
                 <input type="text" name="seria_buletin" style="width: 30px;" required> nr.
                 <input type="text" name="numar_buletin" style="width: 50px;" required>, eliberat de
                 <input type="text" name="eliberat_de" style="width: 150px;"required required> la data de
-                <input type="date" name="data_eliberarii" style="width: 95px;" required>, în calitate de reprezentant la
+                <input type="date" name="data_eliberarii" style="width: 100px;" required>, în calitate de reprezentant la
                 <input type="text" name="reprezentant_la" style="width: 200px;" required>, cu sediul în:
                 <input type="text" name="sediu" style="width: 350px;"required>, declar că am instalat la data de
-                <input type="date" name="data_instalarii" style="width: 95px;" required>, la punctul de lucru din
+                <input type="date" name="data_instalarii" style="width: 100px;" required>, la punctul de lucru din
                 <input type="text" name="adresa" style="width: 400px;" required>, un număr de
                 <input type="number" name="numar_amef" required> aparat/aparate de marcat electronic fiscal, având elementele de identificare:
             </p>
             <p>
-                Serie AMEF: <input type="text" name="serie_amef" required><br>
-                Model: <input type="text" name="model_amef" required><br>
-                Serie fiscală: <input type="text" name="serie_fiscala" required>
+                Serie AMEF: <input type="text" name="serie_amef" required.> Model: <input type="text" name="model_amef" required> Serie fiscală: <input type="text" name="serie_fiscala" required>
             </p>
             <p>
-                Data achiziționării aparatului: <input type="date" name="data_achizitionarii" required>
+                Data achiziționării aparatului: <input type="date" name="data_achizitionarii" style="width: 100px;" required>
             </p>
             <p>
                 Numărul / data avizului Comisiei de avizare a distribuției și utilizării aparatelor de marcat electronice fiscale:
@@ -66,6 +64,13 @@
                 <input type="text" name="tehnician" style="width: 200px;" required>, având legitimația nr.
                 <input type="text" name="legitimatie" style="width: 40px;"required> cu numărul de identificare
                 <input type="text" name="sigiliu" style="width: 50px;"required> de la unitatea service SC SECRET DATA SRL, SATU MARE, strada AVRAM IANCU nr. 17, cod fiscal: RO 9740584 telefon: 0261-768.038
+            </p>
+            <p style="color: red; text-align: justify;">
+                Fiscalizarea s-a facut conform ART.4 din OUG 28/1999 cu modificarile si completarile  ulterioare.
+                Am primit 1 exemplar declaratie de instalare, 1 exemplar carte de interventii si 1 exemplar registru special, inregistrate la finante pentru care confirm si semnez.
+                Cunosc prevederile oug 28/1999 cu modificarile ulterioare inclusiv obligatia de a  pune la dispozitia tehnicianului de service cartea de interventii si registru
+                special ori de cate ori se solicita. Am fost instruit cu privire la utilizarea casei de marcat
+                ATENTIE!!! Conform OUG nr 28/1999 este obligatorie efectuarea cel putin a unei verificari anuale a aparatelor de marcat electronice fiscale.
             </p>
 
             <div class="semnaturi_container">
