--- a/delcaratie_instalare_final/static/declaratie.css
+++ b/delcaratie_instalare_final/static/declaratie.css
@@ -5,20 +5,23 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f9f9f9;
-    display: flex;
+    display: block;
     justify-content: center;
     align-items: flex-start;
     min-height: 100vh;
     overflow-y: auto;
-}
+    text-align: justify;
+    /* line-height: 1.2*/ /* modifica distanta intre randuri*/
+ }
 
 .a4 {
     width: 210mm; /* Dimensiune A4 */
-    height: 297mm;
+    /*height: 297mm;*/
     padding: 10mm;
-    margin: 0 auto;
+    margin: 0 auto 10px;
     box-sizing: border-box;
     overflow: hidden;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 /* Stiluri pentru tipărire (printare) */
@@ -35,7 +38,7 @@ body {
     }
     .a4 {
         width: 210mm;
-        min-height: 297mm;
+        /*min-height: 297mm;*/
         margin: 0;
         padding: 10mm; /* Ajustăm paddingul pentru a evita să fie tăiată zona de conținut */
         page-break-after: avoid; /* Prevenim adăugarea unei pagini goale */
@@ -87,14 +90,21 @@ input[type="number"], textarea {
     margin-bottom: 10px;
 }
 
-button {
-    padding: 10px 20px;
-    background-color: #007BFF;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin: 10px 0;
+.container_butoane {
+    align-items: center;
+    margin: 0;
+    margin-bottom: 20px;
+    /* Stiluri pentru butoane */
+    button {
+        padding: 10px 20px;
+        background-color: #007BFF;
+        color: white;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        margin: 10px 0;
+
+    }
 }
 
 button:hover {
@@ -128,48 +138,19 @@ button:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 10px;
+    margin-top: 5px;
 }
-
-
 
 .semnatura_beneficiar {
     text-align: left;
-    margin-bottom: 50px;
-    margin-top: 50px;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .semnatura_tehnician {
     text-align: left;
-    margin-bottom: 50px;
-    margin-top: 50px;
-}
-
-/* Stiluri pentru butoane */
-button {
-    padding: 10px 20px;
-    background-color: #007BFF;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+    margin-bottom: 10px;
     margin-top: 10px;
-}
-
-button:hover {
-    background-color: #0056b3;
-}
-
-/* Stiluri pentru butoanele de salvare */
-#salveaza_pdf, {
-    margin-top: 20px;
-    padding: 10px 20px;
-    background-color: #28a745; /* Culoare verde pentru salvarea documentului */
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 14px;
 }
 
 #salveaza_word:hover, #salveaza_pdf:hover {
